--- a/ManningsStyle.css
+++ b/ManningsStyle.css
@@ -5,28 +5,73 @@ p{
     letter-spacing: 2px;
 }
 
+pcenter{
+    font-family: "Inika", serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 2px;
+    justify-content: center;
+    text-align: center;
+}
+
 a{
     font-family: "Inika", serif;
     font-weight: 400;
     font-style: normal;
     letter-spacing: 2px;
+    color: inherit;
+    text-decoration: none;
 }
+
+a2{
+    font-family: "Inika", serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 2px;
+    color: firebrick;
+    text-decoration: none;
+}
+
+a:hover {
+    color: gray; 
+    text-decoration: underline;
+}
+
 h1 {
     font-family: "Young Serif", serif;
     font-weight: 400;
     font-style: normal;
+    justify-content: center;
   }
 
+h2{
+    font-family: "Young Serif", serif;
+    font-weight: 200;
+    font-style: normal;
+    justify-content: center; 
+    font-size: 20px;
+    color: firebrick;
+}
+
 .w-100{
-    width: 100%
+    width: 100%;
+}
+
+.w-50{
+    width: 50%;
 }
 
 .div{
     display: flex; 
     margin-top: 20px;
 }
+
 .w-10{
-    width: 10%
+    width: 10%;
+}
+
+.w-20{
+    width: 20%;
 }
 
 .container{
@@ -40,11 +85,47 @@ h1 {
 
 }
 
-.containerLocation{
+.container2{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    max-width: 1000px;
+    margin: auto;
+    gap: 0px; 
 }
 
+.container3{
+    display: flex;
+    justify-content: center;
+    max-width: 700px;
+    margin: auto;
+    gap: 0px; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container4{
+    display: flex; 
+    margin-top: 10px;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.container5{
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 700px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.container6{
+    display: flex; 
+    margin-top: 20px;
+}
 p3{
     font-family: "Inika", serif;
     font-weight: 400;
@@ -60,4 +141,42 @@ p3{
 .wrapper{
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.column {
+    width: 45%;
+    padding: 15px;
+}
+
+.column:first-child {
+    border-right: 2px solid #333; 
+    padding-right: 20px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    padding: 8px;
+    margin: 5px 0;
+}
+
+li img {
+    max-width: 100%;
+    height: auto; 
+    display: block;
+    margin: 10px auto;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-image: url("ManningsAttributes/so-white.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat; 
+    height: 100vh; 
 }
